[package]
name = "thunders"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = {version ="0.27.0", optional = true}
futures = "0.3.30"
serde_json = {version = "1.0", features = ["raw_value"], optional = true}
serde = {version = "1.0", features = ["derive"], optional = true }
uuid = {version = "1.18.1", features = ["v4"]}
log = "0.4.28"
async-channel = "2.5.0"

[dev-dependencies]
iced = {features= ["tokio"], git = "https://github.com/iced-rs/iced.git", branch = "master" }
rand = "0.8"


[features]
client = []
server = []
ws = ["dep:tokio-tungstenite"]
json = ["dep:serde", "dep:serde_json"]

[[example]]
name = "chat"
path = "examples/chat.rs"
required-features = ["client", "server", "ws", "json"]


[[example]]
name = "text-editor-client"
path = "examples/text-editor/client.rs"
required-features = ["client", "ws", "json"]

[[example]]
name = "text-editor-server"
path = "examples/text-editor/server.rs"
required-features = [ "server", "ws", "json"]
